--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -7,6 +7,7 @@
     text-align: center;
     height: 100vh;
     z-index: 99;
+    
 
     &:before {
         content: "";
@@ -20,6 +21,7 @@
         width: 100%;
         height: 100vh;
         
+        
     }
     
     h3{
@@ -31,11 +33,12 @@
     }
     .carousel{
        top: 60px;
+       padding: 0% 5%;
         .card{
             background:  rgba(0,0,0,.5);
             
             border-radius: 6px;
-            padding: 30px 0px;
+            padding: 15px 0px;
             text-align: center;
             transition: all 1.2s ease;
             
@@ -44,6 +47,7 @@
                 .box{
                     transform: scale(1.05);
                     img{
+                        
                         opacity: 1;
                         transition: 1.2s;
                     }
@@ -70,12 +74,13 @@
                 }
     
                 img{
-                    height: 350px;
-                    width: 350px;
+                    height: 250px;
+                    width: 250px;
                     object-fit: cover;
                     opacity: .6;
                     border-radius:3%;
-                     
+                    align-items: center;
+                    margin-left: 2.3vw;
                     
                 }
             }
@@ -94,11 +99,11 @@
 }
 .owl-dots{
     text-align: center;
-    margin-top: 20px;
+    margin-top: 75px;
 }
 .owl-dot{
-    height: 13px;
-    width: 13px;
+    height: 18px;
+    width: 18px;
     outline: none!important;
     border-radius: 50%;
     margin-top: 0 5px;
@@ -107,7 +112,7 @@
 }
 .owl-dot-active{
     width: 35px;
-    border-radius: 14px;
+    border-radius: 19px;
 }
 .owl-dot.active,
 .owl-dot:hover{
