--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -4,6 +4,7 @@
         align-items: center;
         min-height: 100vh;
         background: #03080a;
+        flex-direction: column;
 
     .container{
         width: 80%;
