--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -40,7 +40,8 @@
                         font-size: 18px;
                         padding: 0 10px;
                         z-index: 1;
-                        color: white;
+                        color:#03080a;
+                        
     
                     }
                     .text{
@@ -114,6 +115,14 @@
                     border-radius: 2px;
 
                 } 
+                input[type=number]::-webkit-inner-spin-button, 
+                input[type=number]::-webkit-outer-spin-button { 
+                -webkit-appearance: none; 
+                margin: 0; 
+                }
+
+                input[type=number] { -moz-appearance:textfield; }
+
     
             }
     
