--- a/scss/main.css
+++ b/scss/main.css
@@ -613,7 +613,7 @@
   font-size: 18px;
   padding: 0 10px;
   z-index: 1;
-  color: white;
+  color: #03080a;
 }
 
 .contact .container .row100 .col .inputBox .text {
@@ -685,6 +685,16 @@
   color: #000;
   font-size: 18px;
   border-radius: 2px;
+}
+
+.contact .container .row100 .col input[type=number]::-webkit-inner-spin-button,
+.contact .container .row100 .col input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.contact .container .row100 .col input[type=number] {
+  -moz-appearance: textfield;
 }
 
 .social {
