--- a/scss/main.css
+++ b/scss/main.css
@@ -94,7 +94,7 @@
   transition: 1s ease-out;
 }
 
-.main-header a {
+.main-header .logo, .main-header a {
   text-decoration: none;
   color: inherit;
   text-transform: uppercase;
@@ -774,6 +774,23 @@ footer {
 
 footer .logo a {
   background-color: white;
+}
+
+body {
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+  background-color: #03080a;
+  padding: 5%;
 }
 
 * {
