--- a/ThanksPage/scss/_thanksPage.scss
+++ b/ThanksPage/scss/_thanksPage.scss
@@ -1,16 +1,10 @@
-body{
-    overflow: hidden;
+.thanks-container{
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
     background-color: #03080a;
     padding: 5%;
-    div{
-
-        
-        
-        
-
-    }
+    
 }
