--- a/ThanksPage/scss/main.scss
+++ b/ThanksPage/scss/main.scss
@@ -1,14 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-@import 'banner';
-@import 'header';
-@import 'media';
-@import 'portfolio';
-@import 'about-me';
-@import 'skillset';
-@import 'soft-skills';
-@import 'contact';
-@import 'social';
-@import 'footer';
+@import 'thanksPage';
 
 
 *{
@@ -25,7 +16,4 @@
     }
     
     
-}
-
-
-
+}  
