--- a/scss/_about-me.scss
+++ b/scss/_about-me.scss
@@ -3,6 +3,7 @@
   left: 0;
   overflow: hidden;
   background: black;
+  
 
  
   .animado{
@@ -14,45 +15,42 @@
     position: absolute;
     top: 100%;
     display: flex;
-    
     flex-direction: column;
-    
-    
-    
-    div img {
-        
+      div img {
         position: relative;
-        left: 180px;
+        left: 130px;
         border-radius: 50%;
         width: 25rem;
-        top: 50px;
-        
-        
+        top: 60px;
         
       }
-    
-
-    .about-me_texto div{
-        
-        position: relative;
-        color: white;
-        left: 300%;
-        width: 200%;
-        border-radius: 20px 0;
-        display: flex;
-        flex-direction: column;
-        background: rgba(255,255,255,0.1);
-        padding: 2rem;
-        margin-bottom: 20px;
-        
-        h3 {
-        
-        text-decoration: none;
-        font-size: 2rem;
-        font-weight: unset;
+       .about-me_texto{
         
 
-      }
+          div{
+             
+             position: relative;
+             color: white;
+             left: 300%;
+             width: 200%;
+             border-radius: 20px 0;
+             display: flex;
+             flex-direction: column;
+             background: rgba(255,255,255,0.1);
+             padding: 2rem;
+             margin-bottom: 20px;
+             
+        
+              h2 {
+              text-transform: uppercase;
+              text-decoration: none;
+              font-size: 2rem;
+              font-weight: unset;
+              
+
+              }
+       }
+      
     }
   }
   
