--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,15 +1,20 @@
 .contact{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        
+        
         min-height: 100vh;
         background: #03080a;
-        flex-direction: column;
+        
+    h3{
+        text-align: end;
+        padding-right: 8rem;
+    }
 
     .container{
-        width: 80%;
-        padding: 20px;
         
+        padding: 20px 7rem;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
         
         .row100{
             position: relative;
@@ -26,7 +31,9 @@
                     position: relative;
                     width: 100%;
                     height: 40px;
-                    color: #45f3ff;
+                    color: white;
+                    text-transform: uppercase;
+
     
                     input,
                     textarea{
@@ -67,7 +74,7 @@
                         display: block;
                         width: 100%;
                         height: 2px;
-                        background: #45f3ff;
+                        background: white;
                         transition: 0.5s;
                         border-radius:2px ;
                         pointer-events: none;
@@ -98,18 +105,13 @@
                     height: 100%;
                     }
     
-                    
-    
-                    
-    
-    
                 }
                 input[type="submit"]{
                     border: none;
                     padding: 7px 35px;
                     cursor: pointer;
                     outline: none;
-                    background: #45f3ff;
+                    background: white;
                     color: #000;
                     font-size: 18px;
                     border-radius: 2px;
