--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,11 @@
         color: white;
         font-size: 2rem;
         z-index: 99;
+        text-align: end;
+        position: relative;
+        z-index: 1;
+        padding-top: 4rem;
+        padding-right: 8rem;
     }
     
     
